production-with-istio/helloworld-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: helloworld # How make dynamic change ?
  labels:
    istio-injection: enabled
